@@ -38,19 +38,19 @@
         </dependency>
 
         <!-- Querydsl -->
-<!--        <dependency>-->
-<!--            <groupId>com.querydsl</groupId>-->
-<!--            <artifactId>querydsl-jpa</artifactId>-->
-<!--            <version>${querydsl.version}</version>-->
-<!--            <classifier>jakarta</classifier>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.querydsl</groupId>-->
-<!--            <artifactId>querydsl-apt</artifactId>-->
-<!--            <version>${querydsl.version}</version>-->
-<!--            <classifier>jakarta</classifier>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+            <version>${querydsl.version}</version>
+            <classifier>jakarta</classifier>
+        </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-apt</artifactId>
+            <version>${querydsl.version}</version>
+            <classifier>jakarta</classifier>
+            <scope>provided</scope>
+        </dependency>
 
 
         <!-- runtime scope : 컴파일 시에는 필요하지 않으나, 실행 시에 필요한 의존성 -->
@@ -88,16 +88,11 @@
             <artifactId>commons-dbcp2</artifactId>
         </dependency>
 
-        <!-- eureka-client 및 openfeign -->
+        <!-- eureka-client -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-    <!--        <dependency>-->
-    <!--            <groupId>org.springframework.cloud</groupId>-->
-    <!--            <artifactId>spring-cloud-starter-openfeign</artifactId>-->
-    <!--            <version>4.1.4</version>-->
-    <!--        </dependency>-->
 
         <dependency>
             <groupId>com.toast.java.logncrash</groupId>
@@ -118,11 +113,11 @@
             <version>4.5.13</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20230227</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.json</groupId>-->
+<!--            <artifactId>json</artifactId>-->
+<!--            <version>20230227</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.codehaus.janino</groupId>
@@ -130,6 +125,16 @@
             <version>3.1.10</version>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.5.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -169,17 +174,41 @@
                             <version>1.18.36</version>
                         </path>
 
-<!--                        <path>-->
-<!--                            <groupId>com.querydsl</groupId>-->
-<!--                            <artifactId>querydsl-apt</artifactId>-->
-<!--                            <version>${querydsl.version}</version>-->
-<!--                            <classifier>jakarta</classifier>-->
-<!--                        </path>-->
+                        <!--                        <path>-->
+                        <!--                            <groupId>com.querydsl</groupId>-->
+                        <!--                            <artifactId>querydsl-apt</artifactId>-->
+                        <!--                            <classifier>jakarta</classifier>-->
+                        <!--                        </path>-->
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+            <!-- QueryDSL Plugin -->
+            <plugin>
+                <groupId>com.mysema.maven</groupId>
+                <artifactId>apt-maven-plugin</artifactId>
+                <version>1.1.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/generated-sources/java</outputDirectory>
+                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- 테스트 구동 시에 byte-buddy-agent 관련 경고 뜨는 것 방지하기 위한 설정 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
         </plugins>
-
     </build>
 
 </project>
+
